[package]
name = "super-block"
version = "0.1.0"
edition = "2021"
authors = ["Zolstoy <zolstoy.dev@gmail.com>"]
description = "Starting under the ground, you have to dig to survive."
license = "MIT"

[dependencies]
crossbeam = "0.8.4"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = {version = "1.6.0", features = ["server", "client", "http1"]}
hyper-rustls = {version = "0.27.5", features = ["native-tokio"]}
hyper-tungstenite = "0.17.0"
hyper-util = {version = "0.1.11", features = ["full"]}
log = "0.4.27"
noise = { version = "0.9.0", features = ["images"]}
rustls = "0.23.27"
rustls-pki-types = "1.12.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = {version = "1.45.0", features=["full"]}
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tracing = "0.1.41"
webpki-roots = "1.0.0"
